[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "komihash"
version = "0.0.1"
authors = [
  { name="albus-cygnus", email="albus-cygnus@yandex.ru" },
]
description = "A small CPython-based wrapper around the orginal komihash hash function"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/albus-cygnus/komihash"
"Bug Tracker" = "https://github.com/albus-cygnus/komihash/issues"
